--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.mys3soft.mys3chat">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -27,16 +27,20 @@
         <activity android:name=".ActivityFriendProfile" />
         <activity android:name=".ActivityNotifications" />
 
-        <service android:name=".MyFireBaseInstanceIdService">
+        <service
+            android:name=".AppService"
+            android:enabled="true"
+            android:exported="true"
+            android:stopWithTask="false" />
+
+        <receiver
+            android:name=".AppReceiver"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+                <action android:name="com.mys3soft.mys3chat.restartservice"></action>
             </intent-filter>
-        </service>
-        <service android:name=".MyFireBaseMessagingService">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
+        </receiver>
     </application>
 
 </manifest>
