--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         <activity android:name=".ActivityLogin" />
         <activity android:name=".ActivityRegister" />
         <activity android:name=".ActivityProfile" />
-        <activity android:name=".ActivityChat" />
+        <activity android:name=".ActivityChat"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".ActivityAddContact" />
         <activity android:name=".ActivityFriendProfile" />
         <activity android:name=".ActivityNotifications" />
