--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         <activity android:name=".ActivityLogin" />
         <activity android:name=".ActivityRegister" />
         <activity android:name=".ActivityProfile" />
-        <activity android:name=".ActivityChat" />
+        <activity android:name=".ActivityChat"  android:launchMode="singleTop" />
         <activity android:name=".ActivityAddContact" />
         <activity android:name=".ActivityFriendProfile" />
         <activity android:name=".ActivityNotifications" />
