--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ActivityLogin" />
+        <activity android:name=".ActivityLogin"
+            android:noHistory="true" android:launchMode="singleTop" />
         <activity android:name=".ActivityRegister" />
         <activity android:name=".ActivityProfile" />
-        <activity android:name=".ActivityChat"  android:launchMode="singleTop" />
+        <activity android:name=".ActivityChat"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:launchMode="singleTop" />
         <activity android:name=".ActivityAddContact" />
         <activity android:name=".ActivityFriendProfile" />
         <activity android:name=".ActivityNotifications" />
